--- a/GZEmojiKeyboardDemo/GZEmojiKeyboardDemo/Base.lproj/Main.storyboard
+++ b/GZEmojiKeyboardDemo/GZEmojiKeyboardDemo/Base.lproj/Main.storyboard
@@ -16,11 +16,38 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Emoji Keyboard Demo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NhQ-eK-z5v">
+                                <rect key="frame" x="207.5" y="66" width="185" height="21"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Emoji Input Text Field" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wFu-lv-ir4">
+                                <rect key="frame" x="205" y="166" width="190" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="RNV-ah-pr5"/>
+                                    <constraint firstAttribute="width" constant="190" id="d2B-7u-I9v"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wFu-lv-ir4" firstAttribute="top" secondItem="NhQ-eK-z5v" secondAttribute="bottom" constant="79" id="5zA-bP-Zp7"/>
+                            <constraint firstItem="NhQ-eK-z5v" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="46" id="eYl-Xj-o88"/>
+                            <constraint firstItem="wFu-lv-ir4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iPd-v3-ReF"/>
+                            <constraint firstItem="NhQ-eK-z5v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oXK-2J-6h7"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emojiInput" destination="wFu-lv-ir4" id="kxF-EB-qbz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="380" y="448"/>
         </scene>
     </scenes>
 </document>
